--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,32 +2,38 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+header {
+   padding: 0;
+   font-size: 1.5rem;
+   text-align: center;
+   font-weight: 600;
+   color: rgb(60, 60, 60);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.menu {
+   display: grid;
+   padding: 0.5rem;
+   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+   gap: 0;
+   justify-content: center;
+}
+.menu li {
+   background-color: royalblue;
+   font-size: larger;
+   font-weight: 300;
+   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+   color: #fff;
+   text-align: center;
+   /* box-shadow: 3px 3px 5px inset #4c4d83; */
+   border: 0;
+   height: 3.1rem;
+   transition: all 0.2s ease;
+   padding-top: 10px;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.menu li:hover {
+   background-color: #ffc942;
+   opacity: 1;
+   transform: scale(1.08);  
+   color: #3c3c47; 
 }
